// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditableGroupAndDivision  > should render correctly with allowEdits false 1`] = `
<DocumentFragment>
  <div
    class="leading-9"
  >
    <h3
      class="font-bold flex items-center"
    >
      Group & Division 
    </h3>
    <p>
      -- -- -- --
    </p>
  </div>
  ,
</DocumentFragment>
`;

exports[`EditableGroupAndDivision  > should render correctly with allowEdits true 1`] = `
<DocumentFragment>
  <div
    class="leading-9"
  >
    <h3
      class="font-bold flex items-center"
    >
      Group & Division 
      <button
        aria-label="Edit Group and Division"
        class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none hover:bg-accent hover:text-accent-foreground disabled:opacity-50 h-10 w-10"
        type="button"
      >
        <svg
          class="lucide lucide-pencil w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </h3>
    <p>
      -- -- -- --
    </p>
  </div>
  ,
</DocumentFragment>
`;

exports[`EditableGroupAndDivision  > should render correctly with group and division 1`] = `
<DocumentFragment>
  <div
    class="leading-9"
  >
    <h3
      class="font-bold flex items-center"
    >
      Group & Division 
      <button
        aria-label="Edit Group and Division"
        class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none hover:bg-accent hover:text-accent-foreground disabled:opacity-50 h-10 w-10"
        type="button"
      >
        <svg
          class="lucide lucide-pencil w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </h3>
    <p>
      Group A/Division 1
    </p>
  </div>
  ,
</DocumentFragment>
`;

exports[`EditableGroupAndDivision  > should render correctly without group and division 1`] = `
<DocumentFragment>
  <div
    class="leading-9"
  >
    <h3
      class="font-bold flex items-center"
    >
      Group & Division 
      <button
        aria-label="Edit Group and Division"
        class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none hover:bg-accent hover:text-accent-foreground disabled:opacity-50 h-10 w-10"
        type="button"
      >
        <svg
          class="lucide lucide-pencil w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </h3>
    <p>
      -- -- -- --
    </p>
  </div>
  ,
</DocumentFragment>
`;
